# ming-chat

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml  rustfmt.toml  test.http
migrations/: 20250515093741_initial.sql
notify/: Cargo.toml
notify/src/: main.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
server/src/handlers/: chat.rs  messages.rs  mod.rs
server/src/models/: user.rs
server/src/services/: auth.rs
server/src/utils/: auth.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  messages.rs  mod.rs
src/routes/: auth.rs  chat.rs  messages.rs  mod.rs
