[package]
name = "chat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart", "http2", "query", "tracing", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
