[package]
name = "notify"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
headers = "0.4.0"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
